# q2-fungal-traits

./: .coveragerc  .gitignore  .pre-commit-config.yaml  LICENSE  MANIFEST.in  README.md  plugin_setup.py  pyproject.toml  setup.cfg  setup.py
.github/workflows/: ci.yaml  ci.yml
conda-recipe/: meta.yaml
environment-files/: q2-fungal-traits-qiime2-amplicon-2025.4.yml  q2-fungal-traits-qiime2-amplicon-2026.1.yml  q2-fungal-traits-qiime2-amplicon-2026.4.yml
q2_fungal_traits/: __init__.py  _methods.py  _version.py  annotate.py  citations.bib  plugin_setup.py
q2_fungal_traits/assets/: FungalTraits_1.2_ver_16Dec_2020_V.1.2.tsv
q2_fungal_traits/tests/: __init__.py  test_annotate.py  test_methods.py
q2_fungal_traits/tests/data/: Spore_data_12Nov21_test.tsv  add_fungal_traits_exp.tsv  add_fungal_traits_requires_phylum_match_exp.tsv  add_fungal_traits_requires_phylum_match_taxonomy.tsv  add_fungal_traits_requires_phylum_match_traits.tsv  add_spore_volume_exp.tsv  add_spore_volume_requires_kingdom_match_exp.tsv  add_spore_volume_requires_kingdom_match_spore.tsv  add_spore_volume_requires_kingdom_match_taxonomy.tsv  add_spore_volume_without_family_tax_key_exp.tsv  add_spore_volume_without_family_tax_key_spore.tsv  add_spore_volume_without_family_tax_key_taxonomy.tsv  add_spore_volume_without_species_tax_key_exp.tsv  add_spore_volume_without_species_tax_key_spore.tsv  add_spore_volume_without_species_tax_key_taxonomy.tsv  drop_duplicates_exp.tsv  drop_duplicates_input.tsv  ensure_species_key_has_genus_exp.tsv  (+19 more)
q2_fungal_traits/types/: __init__.py  _format.py  _type.py
(+2 files in other folders)
